Bug 107806 - Semantic and syntax for .uno:RowHeight and .uno:ColumnWidth have been changed
Summary: Semantic and syntax for .uno:RowHeight and .uno:ColumnWidth have been changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.3.3.2 release
Hardware: All All
: medium normal
Assignee: Henry Castro
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-05-12 19:47 UTC by Regina Henschel
Modified: 2017-09-05 00:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
CellSizeNew (695 bytes, application/vnd.softmaker.basicmaker)
2017-05-12 19:47 UTC, Regina Henschel
Details
CellSizeOld (1.07 KB, application/vnd.softmaker.basicmaker)
2017-05-12 19:48 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-05-12 19:47:26 UTC
Created attachment 133274 [details]
CellSizeNew

From LO 5.2 to LO 5.3 the semantic and syntax of .uno:RowHeight and .uno:ColumnWidth have been changed significant.

In LO 5.2 .uno:RowHeight and .uno:ColumnWidth have one parameter for height and width respectively, and the values where in 1/100 mm. The new height/width was applied to the current cell.
If you use such macro (attachment CellSizeOld) in LO 5.3, the row height/column width dialog opens.

In LO 5.3 .uno:RowHeight and .uno:ColumnWidth have two parameters. The first one to select row/column and the second one for height/width. The row and column is not zero based as it is in other commands, but e.g. row=4 is indeed row=4 and column=4 is column D. The height and width are no longer in 1/100 mm, but you need a magic number to get the desired size.
If you use such macro (attachment CellSizeNew) in LO 5.2, the row height/column width dialog opens.

If the change was intended, then announcement and documentation is missing. But the strange values, which are needed in LO 5.3, look suspicious to me, so it seems to be a bug.
Comment 1 Regina Henschel 2017-05-12 19:48:58 UTC
Created attachment 133275 [details]
CellSizeOld

You can load the files into a module in the Basic IDE and then test it in Calc.
Comment 2 Buovjaga 2017-05-14 11:20:02 UTC
(In reply to Regina Henschel from comment #1)
> Created attachment 133275 [details]
> CellSizeOld
> 
> You can load the files into a module in the Basic IDE and then test it in
> Calc.

Yep the dialog opens.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha1+
Build ID: c0968aa4673a8ac9a8a09a0e291b58b94bdbb35e
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 13th 2016
Comment 3 raal 2017-08-23 15:20:11 UTC
This seems to have begun at the below commit.
Adding Cc: to Henry Castro; Could you possibly take a look at this one? Thanks
 ea09339ceba3488aee0d56d953599d24edb9979e is the first bad commit
commit ea09339ceba3488aee0d56d953599d24edb9979e
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Jul 30 00:51:18 2016 -0700

    source ff051403381ca85724fec4f7bd2363141fa675f6
author	Henry Castro <hcastro@collabora.com>	2016-07-29 19:00:49 (GMT)
committer	Henry Castro <hcastro@collabora.com>	2016-07-29 21:16:52 (GMT)
commit ff051403381ca85724fec4f7bd2363141fa675f6 (patch)
tree 0c5ac9b80a06ea5bb7e612df536e8e3b09926bb4
parent bb442b7ee6bf93f791cfef007c3e9375afde8655 (diff)
sc lok: add parameters for column/row resize
Comment 4 Henry Castro 2017-08-23 15:41:24 UTC
Checking ...
Comment 5 Henry Castro 2017-08-23 16:09:43 UTC
>> In LO 5.3 .uno:RowHeight and .uno:ColumnWidth have two parameters. The first
>> one to select row/column and the second one for height/width. The row and
>> column is not zero based as it is in other commands, but e.g. row=4 is indeed >> row=4 and column=4 is column D. The height and width are no longer in 1/100
>> mm, but you need a magic number to get the desired size.

Indeed, they were added to LibreOffice Online to avoid round-trips, it was not intended to be used in desktop.

But if they are useful, I can patch it to accepts parameters in 1/100 mm
Comment 6 Regina Henschel 2017-08-23 20:57:39 UTC
If you need special features, then I would expect new commands, not a change in the existing commands. So I suggest to turn .uno:RowHeight und uno.ColumnWidth back to the old behavior.
Comment 7 Henry Castro 2017-08-23 21:16:43 UTC
>> If you need special features, then I would expect new commands, not a change
>> in the existing commands. So I suggest to turn .uno:RowHeight und
>> uno.ColumnWidth back to the old behavior.

No, they were an extension of the commands and they were not to intended to break any old behavior. I will test the macros, if you pass one parameter it should work as old behavior, but if you use 2 parameters, they are used for LibreOffice Online.
Comment 8 Commit Notification 2017-08-25 14:29:30 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2356d9e4997fe9613c0f3e399ec6a03a2bdf861e

tdf#107806: Semantic and syntax for .uno:RowHeight have been changed

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-09-05 00:37:52 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/online/commit/?id=3b6af443bda99dd8f10b668bbafa5efdceb3d6be

loleaflet: related to tdf#107806