tdf#107806: Semantic and syntax for .uno:RowHeight have been changed

Change-Id: If9ce7ff36ef3ba8e55103765f3260e74ab2eebd4
Reviewed-on: https://gerrit.libreoffice.org/41567
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Henry Castro <hcastro@collabora.com>